[package]
name = "blog-rs"
version = "0.1.0"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
futures = "0.3.12"
tide = "0.15.0"
async-std = { version = "1.9.0", features = ["attributes"] }

dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.4.3"

async-graphql = "2.5.1"
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
bson = "1.1.0"
chrono = "0.4.19"
serde = { version = "1.0.120", features = ["derive"] }
serde_json = "1.0.61"

jsonwebtoken = "7.2.0"
ring = "0.16.19"
base64 = "0.13.0"

surf = "2.1.0"
handlebars = "3.5.2"
graphql_client = "0.9.0"
