[package]
name = "surfer-backend"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
async-std = { version = "1.10.0", features = ["attributes"] }
tide = { path = "../../../tmp/tide" }

dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.5.4"

async-graphql = { version = "3.0.3", features = ["bson", "chrono"] }
mongodb = { version = "2.0.2", default-features = false, features = [
  "async-std-runtime",
] }

serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.19"
jsonwebtoken = "7.2.0"
ring = "0.16.20"
base64 = "0.13.0"

deunicode = "1.3.1"
pulldown-cmark = { version = "0.8.0", default-features = false, features = [
  "simd",
] }
