[package]
name = "surfer-backend"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2021"

[dependencies]
futures = "0.3"
async-std = { path = "../../../crates/async-std", features = ["attributes"] }
tide = { path = "../../../crates/tide", features = ["logger"] }

dotenv = "0.15"
lazy_static = "1.4"
regex = "1.5"

async-graphql = { version = "4.0.0-alpha", features = ["bson", "chrono"] }
mongodb = { version = "2.2", default-features = false, features = [
  "async-std-runtime",
] }

serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
jsonwebtoken = "8.1"
ring = "0.16"
base64 = "0.13"

deunicode = "1.3"
pulldown-cmark = { version = "0.9", default-features = false, features = [
  "simd",
] }
