[package]
name = "frontend-handlebars"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
tide = "0.16.0"

dotenv = "0.15.0"
lazy_static = "1.4.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"

surf = "2.3.1"
graphql_client = "0.10.0"
handlebars = { version = "4.1.2", features = ["script_helper"] }

[dev-dependencies]
rhai = "1.0.2"
