[package]
name = "surfer-frontend-handlebars"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2021"

[dependencies]
async-std = { path = "../../../crates/async-std", features = ["attributes"] }
tide = { path = "../../../crates/tide", features = ["logger", "cookies"] }

dotenv = "0.15"
lazy_static = "1.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

surf = "2.3"
graphql_client = "0.10"
handlebars = { version = "4.2", features = ["script_helper"] }

[dev-dependencies]
rhai = "1.7"
