[package]
name = "surfer-frontend-yew"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.6"

yew = { path = "../../../tmp/yew/packages/yew" }
yew-router = { path = "../../../tmp/yew/packages/yew-router" }
gloo = "0.3.0"

toml = "0.5.8"
lazy_static = "1.4.0"

graphql_client = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.44"
