[package]
name = "yazhijia-frontend"
version = "0.0.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }

dotenv = "0.15.0"
lazy_static = "1.4.0"

serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"

surf = "2.2.0"
graphql_client = "0.9.0"
handlebars = { version = "3.5.3", features = ["script_helper"] }
chrono = "0.4.19"
